# hospital-back

./: .env  .gitignore  Cargo.toml  My Project.apidog.json  My Project.openapi.json  README.md  local.env
.sqlx/: query-071a19f6ebdb1cc6dabcdf3411c7a25b76aff14b2ae785ac3385bcafab269d6b.json  query-4b468986af1c571e59f3e2ef72c4ef9cf239ffbf8a547c903a1be913a6638eae.json  query-5f1297a57f056d7f38c0437b4223eb17d91654493133b87ac4cab04f8e6530a4.json  query-6394db522f0f03717187f8efee3f79e7f99e49cf708931e13f8ec16877e1e982.json  query-69c6eb6374c8ab0029a00b222ed93610cd3df8ae3f013b3a6e36da248c8a645f.json  query-8410992d29ccdf5b5a398e7c985d6d87a120564350c1721b3daabc474f62d2ed.json  query-8e9b480fc740d5c831e535cc6e9e9b4743a0d95ba838a9c883869f8c3a997649.json  query-9d02384f01c304818eda17948c74203c1d540d09248dabe17a382789ff87b569.json  query-a4dd05f64d4229cf6d881ede57f9d49d55cce64805aa2d099c55af8eb4977fd7.json  query-a83ca4f180c809adddb4dadf07fa6ba11830982e39ae893010e615e31844a394.json  query-ac950af5e34b3761c66f73903718a7d2d369e789c8cb5dc916a64e34cfd8bad9.json  query-bde337b9895eea8f1c9b547dc0a65b11f50331c11f4f3dd6adb9fa0a58fff783.json  query-be9324b98810ec58a54c2b45b70701e12a9930f17821b6198cba2426c293799a.json  query-c50ffc69c111f0a6ccae6cd834258253d717212b80dae4bbccec2490ad9abb7f.json  query-d09bd802021f262db3bdbd0fc1eae57267144b47f7935174e638cdc7ebfe8334.json  query-e1ff3b36fa4e9e1e505970c10b9ad7c1ec66cf2c48c884cef7c41cb9c4bf0f72.json
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/db/: Cargo.toml
crates/db/.sqlx/: query-09f6b4131b5728238848ea9a79aadb57573a6ddc1d184a3bbbfb6a3417eb154d.json  query-57ebe9b4ac795172f1bb0f11ee5756702c9fe8431d0ae1b0e64120a25fa7343b.json  query-c458d8add6cd403fa48e47f21f64ba49f5e0ce657fd25dd56d37bdcd50eff2ed.json
crates/db/migrations/: 0001_init.sql
crates/db/src/: lib.rs
services/api/: Cargo.toml
services/api/src/: auth_guard.rs  error.rs  extractors.rs  lib.rs  main.rs  middleware.rs  schemas.rs  state.rs
services/api/src/routes/: auth.rs  desease.rs  equipment.rs  items.rs  mod.rs
services/api/tests/: auth_test.rs
