[package]
name = "auth"
version = "0.1.0"
edition = "2024"


[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22.1"

