[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate","bigdecimal"] }
tracing = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
common = { path = "../common" }
auth = { path = "../auth"}
bigdecimal = { version = "0.4", features = ["serde"] }
serde_json = { workspace = true }

