[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
tracing = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
common = { path = "../../crates/common" }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["rand_core"] }
rand_core = "0.9.3"