[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["macros"] }
actix-cors = "0.7"
actix-governor = "0.8.0"
actix-web-httpauth = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
validator = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

auth = { path = "../../crates/auth" }
common = { path = "../../crates/common"}
db = { path = "../../crates/db" }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

cookie = { version = "0.18.1", features = ["secure", "percent-encode"] }
futures-util = "0.3.31"
sha1_smol = "1.0.1"
openidconnect = { version = "4.0.1", features = ["reqwest"] }
dashmap = "6.1.0"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "json"] }
oauth2 = "5.0.0"



[[test]]
name = "auth_test"
path = "tests/auth_test.rs"